<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LLoyds Student</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_main">Main Menu</string>
    <string name="title_balance">Balance</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_wallets">Wallets</string>
    <string name="title_banking">Further Banking</string>
    <string name="title_help">Help</string>
    <string name="title_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_" />
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_balance">BalanceActivity</string>
    <string name="title_activity_banking">BankingActivity</string>
    <string name="title_activity_transfer">TransferActivity</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_passcode_login">PasscodeLoginActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="pay_bills_note">Please note that bank needs 7 working days to transfer money to another account. Your entered details will be viewed by our team and we will contact you by email.</string>
    <string name="standing_orders_note">You currently have no standing orders. To set it up please go online or contact your nearest branch.</string>
    <string name="standing_order_title">Add new standing order</string>
    <string name="standing_order_name">Name:</string>
    <string name="standing_order_amount">Amount:</string>
    <string name="standing_order_date">Date:</string>
    <string name="standing_order_add">Add</string>



    <color name="lloyds_green">#115842</color>
    <color name="white">#FFFFFF</color>

    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="pound_symbol">£</string>
    <string name="euro_symbol">€</string>
    <string name="dollar_symbol">$</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_locate_map">Nearest Branch</string>
    <string name="title_activity_budgets">Budgeting</string>

    <string-array name="example_items">
        <item>Lloyds Bank</item>
        <item>Lloyds Bank TSB</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_contact">NewContactActivity</string>
    <string name="title_activity_statement">StatementActivity</string>
    <string name="title_activity_pay_person">PayPersonActivity</string>
    <string name="title_activity_faq">FAQActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="title_activity_product_info">ProductInfoActivity</string>
    <string name="title_activity_activity_top_up">activity_top_up</string>
    <string name="title_activity_activity_redeem">activity_redeem</string>
    <string name="title_activity_pay_bills">PayBills</string>
    <string name="title_activity_standing_orders">StandingOrders</string>
    <string name="title_activity_add_new_standing_order">Add New Standing Order</string>

</resources>