<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.ac.ncl.csc2022.team10.banking.AddNewStandingOrder">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/standing_order_title"
        android:id="@+id/textView_newStanding_Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/standing_order_name"
        android:id="@+id/textView_standing_order_name"
        android:layout_below="@+id/textView_newStanding_Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/standing_order_amount"
        android:id="@+id/textView_standing_order_amount"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView_standing_order_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/standing_order_date"
        android:id="@+id/textView_standing_order_date"
        android:layout_below="@+id/textView_standing_order_amount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_standing_order_name"
        android:layout_alignTop="@+id/textView_standing_order_name"
        android:layout_toRightOf="@+id/textView_standing_order_amount"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_alignRight="@+id/textView_newStanding_Title"
        android:layout_alignEnd="@+id/textView_newStanding_Title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_standing_order_amount"
        android:layout_alignBottom="@+id/textView_standing_order_amount"
        android:layout_alignLeft="@+id/editText_standing_order_name"
        android:layout_alignStart="@+id/editText_standing_order_name"
        android:layout_alignRight="@+id/editText_standing_order_name"
        android:layout_alignEnd="@+id/editText_standing_order_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_standing_order_date"
        android:layout_alignBottom="@+id/textView_standing_order_date"
        android:layout_alignLeft="@+id/editText_standing_order_amount"
        android:layout_alignStart="@+id/editText_standing_order_amount"
        android:layout_alignRight="@+id/editText_standing_order_amount"
        android:layout_alignEnd="@+id/editText_standing_order_amount" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standing_order_add"
        android:id="@+id/button_standing_order_add"
        android:layout_marginBottom="68dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
